Bug 444815 View unexpectedly removes message after changing tag. r/sr=bienvenu